--- a/diazotheme/bootstrap/static/base.html
+++ b/diazotheme/bootstrap/static/base.html
@@ -111,9 +111,9 @@
                      <li class="active">Plone</li>
                   </ul>
                </div>
-               <div id="content-columns">
+               <div id="content-columns container">
                   <div class="row">
-                     <div id="left-column" class="span3">
+                     <div id="left-column" class="col-md-3">
                         <div id="left-column-content">
                         <section>
                            <h4 class="portlet-header">Navigation</h4>
@@ -196,7 +196,7 @@
                         </article>
                         </div>
                      </div>
-                     <div id="right-column" class="span3">
+                     <div id="right-column" class="col-md-3">
                         <div id="right-column-content">
                         <section>
                            <h4 class="portlet-header">Calendar</h4>
