adding body class and custom front page

--- a/diazotheme/bootstrap/static/base.html
+++ b/diazotheme/bootstrap/static/base.html
@@ -53,6 +53,8 @@
       </head>
 
       <body>
+  		<div id="skip-link"><a href="#content" class="sr-only sr-only-focusable">Skip to main content</a></div>
+		  
 
          <nav class="navbar navbar-default">
             <!--div class="navbar-inner"-->
