--- a/diazotheme/bootstrap/static/unicorn.html
+++ b/diazotheme/bootstrap/static/unicorn.html
@@ -39,6 +39,7 @@
       <link rel="stylesheet" href="css/theme.css"/>
       <link rel="stylesheet" href="jqueryui/css/eggplant/jquery-ui-1.8.5.custom.css"/>
 	  <link rel="stylesheet" href="css/overrides.css"/>
+	  <link rel="stylesheet" href="css/unicorn.css"/>
 	  <!--link rel="stylesheet" href="css/background.css"/-->
 	  
 	  
@@ -61,8 +62,8 @@
 		<div id="skip-link"><a href="#content" class="sr-only sr-only-focusable">Skip to main content</a></div>
 		
 		<div class="row jumbotron">
-		  <div class="container">
-		    <div class="target"></div>
+		  <div class="sliders">
+		    <div class="wall wallpaper"></div>
 			
 		  </div>
 		</div>
