css working mostly - good breakpoint

--- a/diazotheme/bootstrap/static/unicorn.html
+++ b/diazotheme/bootstrap/static/unicorn.html
@@ -67,8 +67,7 @@
 			
 		  </div>
 		</div>
-		<div class="container" id="main">
-
+		<div class="container" id="main ">
          <nav class="navbar navbar-default">
             <!--div class="navbar-inner"-->   
                <div class="container">
@@ -113,8 +112,10 @@
             <!--/div-->
 
          </nav>
+ 		<div class="container">
+		 
 
-         <div id="container" class="container">
+         
             <div id="header">
                <img id="logo" src="img/logo.png"/>
             </div>
@@ -284,7 +285,8 @@
 
              </div>
 		     </div>
-		     </div>
+		 </div>
+		     
 		 </div> <!--end container main-->
 
             <div style="clear:both">&nbsp;</div>
