--- a/diazotheme/bootstrap/static/unicorn.html
+++ b/diazotheme/bootstrap/static/unicorn.html
@@ -153,7 +153,14 @@
 	        </ul>
 	      </nav>
 	    </div>
-		<nav id="main-nav">
+		<nav id="main-nav" role="navigation">
+		    <!-- Mobile menu toggle button (hamburger/x icon) -->
+		    <input id="main-menu-state" type="checkbox" />
+		    <label class="main-menu-btn" for="main-menu-state">
+		      <span class="main-menu-btn-icon"></span> Toggle main menu visibility
+		    </label>
+
+		    <h2 class="nav-brand"><a href="#">Brand</a></h2>
 			<ul id="main-menu" class="sm sm-blue">
 				<li> menu items here</li>
 			</ul>
