--- a/diazotheme/bootstrap/static/unicorn.html
+++ b/diazotheme/bootstrap/static/unicorn.html
@@ -61,6 +61,7 @@
 	  <link rel="stylesheet" href="smartmenus/src/css/sm-core-css.css"/>
 	  <link rel="stylesheet" href="smartmenus/src/css/sm-blue/sm-blue.css"/>
 	  <link rel="stylesheet" href="css/topbar.css"/>
+	  <link rel="stylesheet" href="css/styles.css" />
 	  <!--link rel="stylesheet" href="css/background.css"/-->
 	  
 	  
@@ -121,9 +122,7 @@
 								</div><!-- /#LSResult -->
 	            </form>
 	          </li>
-	          <li class="hidden-xs" id="uti-share">
-	            <a href="#"></a>
-	          </li>
+	          
 	          <li id="uti-logo">
 	            <a href="http://www.ucdavis.edu">
 	              <img src="images/logos/nav-logo.png" />
